--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "git://github.com/theoephraim/node-google-spreadsheet.git"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": ">=0.8.0"
   },
@@ -31,6 +31,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/node": "^13.7.6",
     "delay": "^4.3.0",
     "docsify-cli": "^4.4.0",
     "eslint": "^6.8.0",
@@ -40,7 +41,8 @@
     "eslint-plugin-jest": "^23.6.0",
     "husky": "^4.2.0",
     "jest": "^24.9.0",
-    "jest-junit": "^10.0.0"
+    "jest-junit": "^10.0.0",
+    "typescript": "^3.8.2"
   },
   "scripts": {
     "test": "jest --runInBand",
